# egraph-rs

./: .clinerules  .eslintrc.json  .gitignore  .gitmodules  Cargo.toml  Makefile  PROJECT_SUMMARY.md  README.md  lerna.json  package-lock.json  package.json
crates/algorithm/shortest-path/: Cargo.toml
crates/algorithm/shortest-path/benches/: apsp.rs
crates/algorithm/shortest-path/src/: bfs.rs  dijkstra.rs  distance_matrix.rs  lib.rs  warshall_floyd.rs  weighted_edge_length.rs
crates/algorithm/shortest-path/tests/: apsp.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/egraph/: Cargo.toml
crates/egraph-algorithm-biconnected-components/: Cargo.toml
crates/egraph-algorithm-biconnected-components/src/: lib.rs
crates/egraph-wasm/: Cargo.toml  README.md
crates/egraph-wasm/src/: lib.rs
crates/egraph-wasm/src/layout/: fm3.rs  layered.rs
crates/egraph/benches/: force_directed.rs
crates/egraph/examples/: layout.rs  quadtree.rs
crates/egraph/src/: lib.rs
crates/egraph/src/algorithm/: connected_components.rs  mod.rs
crates/egraph/src/algorithms/: mod.rs
crates/egraph/src/edge_bundling/: force_directed.rs
crates/egraph/src/graph/: mod.rs
crates/egraph/src/grouping/: force_directed.rs  mod.rs  treemap.rs
crates/egraph/src/layout/: fm3.rs  mod.rs
crates/egraph/src/misc/: mod.rs  quadtree.rs
crates/egraph/tests/: lib.rs
crates/layout/fm3/: Cargo.toml
crates/layout/fm3/src/: lib.rs
crates/layout/force/: Cargo.toml
crates/layout/force-simulation/: Cargo.toml
crates/layout/force-simulation/examples/: example.rs
crates/layout/force-simulation/src/: coordinates.rs  force.rs  lib.rs  simulation.rs
crates/layout/force/examples/: example.rs
crates/layout/force/src/: center_force.rs  collide_force.rs  lib.rs  link_force.rs  many_body_force.rs  position_force.rs  radial_force.rs
crates/layout/grouped-force/: Cargo.toml
crates/layout/grouped-force/src/: lib.rs
crates/layout/kamada-kawai/: Cargo.toml
crates/layout/kamada-kawai/src/: lib.rs
crates/layout/mds/: Cargo.toml
crates/layout/mds/src/: classical_mds.rs  double_centering.rs  eigendecomposition.rs  lib.rs  pivot_mds.rs
crates/layout/mds/tests/: mds.rs
crates/layout/separation-constraints/: Cargo.toml
crates/layout/separation-constraints/examples/: dependency-graph.json  dependency_graph_layered.rs  lesmis_cluster_overlap.rs  qh882_separation_constraints.rs
crates/layout/separation-constraints/src/: constraint_graph.rs  constraints.rs  lib.rs
crates/layout/separation-constraints/tests/: integration_test.rs  rectangle_overlap.rs
crates/layout/sgd/: Cargo.toml
crates/layout/sgd/src/: distance_adjusted_sgd.rs  full_sgd.rs  lib.rs  scheduler.rs  sgd.rs  sparse_sgd.rs
crates/layout/stress-majorization/: Cargo.toml
crates/layout/stress-majorization/src/: lib.rs
crates/python/: .gitignore  Cargo.toml  README.md  netlify.toml  pyproject.toml
crates/python/docs/: Makefile  egraph.html  index.html  make.bat  netlify.toml  requirements.txt  search.js
crates/python/docs/source/: conf.py  index.rst
crates/python/examples/: kamada_kawai.py  nonconnected_sgd.py  overwrap_removal.py  sgd.py  sgd_3d.py  sgd_hyperbolic_2d.py  sgd_spherical_2d.py  sgd_torus.py  sgd_torus_cell_optimization.py  stress_majorization.py  torus_sgd.py
crates/python/src/: array.rs  coordinates.rs  distance_matrix.rs  drawing.rs  drawing_torus.rs  graph.rs  lib.rs  quality_metrics.rs  rng.rs
crates/python/src/algorithm/: mod.rs  separation_constraints.rs  shortest_path.rs  triangulation.rs
crates/python/src/clustering/: coarsen.rs  infomap.rs  label_propagation.rs  louvain.rs  mod.rs  spectral.rs
crates/python/src/drawing/: drawing.rs  drawing_base.rs  drawing_euclidean.rs  drawing_euclidean_2d.rs  drawing_hyperbolic_2d.rs  drawing_spherical_2d.rs  drawing_torus_2d.rs  mod.rs
crates/python/src/graph/: graph.rs  graph_base.rs  mod.rs
crates/python/src/layout/: mds.rs  (+6 more)
crates/python/tests/: test_algorithm.py  test_clustering.py  test_digraph.py  test_distance_matrix.py  test_drawing_euclidean.py  test_drawing_euclidean_2d.py  test_drawing_hyperbolic_2d.py  test_drawing_spherical_2d.py  test_drawing_torus_2d.py  test_graph.py  test_helpers.py  test_kamada_kawai.py  test_mds.py  test_numpy_integration.py  test_omega.py  test_overwrap_removal.py  test_quality_metrics.py  test_rdmds.py  test_rng.py  test_separation_constraints.py  test_sgd.py  test_shortest_path.py  test_stress_majorization.py  test_triangulation.py  test_weighted_edge_length.py
crates/quality-metrics/: Cargo.toml
crates/quality-metrics/src/: angular_resolution.rs  aspect_ratio.rs  edge_angle.rs  edge_crossings.rs  gabriel_graph_property.rs  ideal_edge_length.rs  ideal_edge_lengths.rs  lib.rs  neighborhood_preservation.rs  node_resolution.rs  number_of_crossings.rs  shape.rs  shape_quality.rs  stress.rs
crates/wasm/: Cargo.toml  README.md  build.js  package.json  rollup.config.js
crates/wasm/grouping/: Cargo.toml
crates/wasm/layout-force-directed/: Cargo.toml
crates/wasm/pkg/: package.json
crates/wasm/src/: algorithm.rs  clustering.rs  drawing.rs  edge_bundling.rs  graph.rs  layout.rs  lib.rs  quality_metrics.rs  rng.rs
crates/wasm/tests/: classical_mds.js  classical_mds.rs  clustering.js  clustering.rs  digraph.js  digraph.rs  drawing_euclidean_2d.js  drawing_euclidean_2d.rs  drawing_hyperbolic_2d.js  drawing_hyperbolic_2d.rs  drawing_spherical_2d.js  drawing_spherical_2d.rs  drawing_torus_2d.js  drawing_torus_2d.rs  edge_bundling.js  edge_bundling.rs  graph.js  graph.rs  kamada_kawai.js  kamada_kawai.rs  node.js  node.rs  quality_metrics.js  quality_metrics.rs  rng.js  rng.rs  sgd.js  sgd.rs  sgd_full.js  sgd_full.rs  sgd_sparse.js  sgd_sparse.rs  stress_majorization.js  stress_majorization.rs  web.rs
egraph-py/: Cargo.toml  example.py
egraph-py/src/: lib.rs
egraph-wasm/: Cargo.toml  LICENSE
egraph-wasm/pkg/: package-lock.json  package.json
egraph-wasm/src/: edge_bundling.rs  graph.rs  lib.rs
egraph-wasm/src/layout/: convert.rs  fm3.rs  mod.rs
wasm/layout/force-directed/: Cargo.toml
(+621 files in other folders)
