[workspace]
resolver = "2"
members = [
    "crates/algorithm/connected-components",
    "crates/algorithm/layering",
    "crates/algorithm/shortest-path",
    "crates/algorithm/triangulation",
    "crates/cli",
    "crates/clustering",
    "crates/dataset",
    "crates/drawing",
    "crates/edge-bundling/fdeb",
    "crates/layout/kamada-kawai",
    "crates/layout/omega",
    "crates/layout/overwrap-removal",
    "crates/layout/sgd",
    "crates/layout/mds",
    "crates/layout/separation-constraints",
    "crates/layout/stress-majorization",
    "crates/linalg/rdmds",
    "crates/python",
    "crates/quality-metrics",
    "crates/wasm",
]
