[package]
name = "egraph-py"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]

[dependencies]
clp = { path = "../clp" }
egraph = { path = "../egraph" }
petgraph = "0.4"

[dependencies.pyo3]
version = "0.4"
features = ["extension-module"]

[lib]
name = "egraph"
crate-type = ["cdylib"]
