[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
argparse = "0.2.2"
petgraph = "0.6"
petgraph-layout-fruchterman-reingold = { path = "../layout/fruchterman-reingold" }
petgraph-layout-force-simulation = { path = "../layout/force-simulation" }
petgraph-layout-non-euclidean-force-simulation = { path = "../layout/non-euclidean-force-simulation" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
