[package]
name = "egraph-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
argparse = "0.2.2"
petgraph = "0.6"
petgraph-algorithm-shortest-path = { path = "../algorithm/shortest-path" }
petgraph-layout-force-simulation = { path = "../layout/force-simulation" }
petgraph-layout-fruchterman-reingold = { path = "../layout/fruchterman-reingold" }
petgraph-layout-sgd = { path = "../layout/sgd" }
petgraph-layout-non-euclidean-force-simulation = { path = "../layout/non-euclidean-force-simulation" }
petgraph-quality-metrics = { path = "../quality-metrics" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
