[package]
name = "egraph-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
argparse = "0.2.2"
petgraph = "0.6"
petgraph-algorithm-shortest-path = { path = "../algorithm/shortest-path" }
petgraph-drawing = { path = "../drawing" }
petgraph-layout-sgd = { path = "../layout/sgd" }
petgraph-quality-metrics = { path = "../quality-metrics" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
