[package]
name = "egraph-algorithm-biconnected-components"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[dependencies]
egraph-adapter = { path = "../adapter/adapter" }

[dev-dependencies]
egraph-petgraph-adapter = { path = "../adapter/petgraph" }
petgraph = "0.5"
