[package]
name = "egraph-wasm"
version = "0.1.0-5"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[dependencies]
egraph = { path = "../egraph" }
egraph-layered = { path = "../egraph-layered" }
js-sys = "0.3.5"
petgraph = "0.4.13"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
