[package]
name = "egraph-python"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "egraph"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15"
pyo3 = { version = "0.21", features = ["abi3-py37", "extension-module"] }
petgraph = "0.6"
petgraph-algorithm-shortest-path = { path = "../algorithm/shortest-path" }
petgraph-drawing = { path = "../drawing" }
petgraph-layout-force= { path = "../layout/force" }
petgraph-layout-force-simulation = { path = "../layout/force-simulation" }
petgraph-layout-kamada-kawai = { path = "../layout/kamada-kawai" }
petgraph-layout-mds = { path = "../layout/mds" }
petgraph-layout-sgd = { path = "../layout/sgd" }
petgraph-layout-stress-majorization = { path = "../layout/stress-majorization" }
petgraph-quality-metrics = { path = "../quality-metrics" }
rand = "0.8"
