[package]
name = "egraph-python"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "egraph"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15"
pyo3 = { version = "0.21", features = ["abi3-py37", "extension-module"] }
petgraph = "0.6"
petgraph-algorithm-shortest-path = { path = "../algorithm/shortest-path" }
petgraph-algorithm-layering = { path = "../algorithm/layering" }
petgraph-algorithm-triangulation = { path = "../algorithm/triangulation" }
petgraph-clustering = { path = "../clustering" }
petgraph-drawing = { path = "../drawing" }
petgraph-layout-kamada-kawai = { path = "../layout/kamada-kawai" }
petgraph-layout-mds = { path = "../layout/mds" }
petgraph-layout-overwrap-removal = { path = "../layout/overwrap-removal" }
petgraph-layout-sgd = { path = "../layout/sgd" }
petgraph-layout-stress-majorization = { path = "../layout/stress-majorization" }
petgraph-layout-separation-constraints = { path = "../layout/separation-constraints" }
petgraph-quality-metrics = { path = "../quality-metrics" }
rand = "0.8"
