[package]
name = "petgraph-quality-metrics"
version = "0.1.0"
edition = "2018"

[dependencies]
itertools = "0.10"
ndarray = "0.15"
petgraph = "0.6"
petgraph-algorithm-shortest-path = { path = "../algorithm/shortest-path" }
petgraph-layout-force-simulation = { path = "../layout/force-simulation" }
spade = "2.0.0"