[package]
name = "egraph-wasm"
version = "5.0.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"
description = "WebAssembly binding of egraph."
repository = "https://github.com/likr/egraph-rs/tree/master/crates/wasm"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
petgraph = "0.6"
petgraph-clustering = { path = "../clustering" }
petgraph-edge-bundling-fdeb = { path = "../edge-bundling/fdeb" }
petgraph-layout-fm3 = { path = "../layout/fm3" }
petgraph-layout-force= { path = "../layout/force" }
petgraph-layout-force-simulation = { path = "../layout/force-simulation" }
petgraph-layout-fruchterman-reingold = { path = "../layout/fruchterman-reingold" }
petgraph-layout-grouped-force = { path = "../layout/grouped-force" }
petgraph-layout-kamada-kawai = { path = "../layout/kamada-kawai" }
petgraph-layout-non-euclidean-force-simulation = { path = "../layout/non-euclidean-force-simulation" }
petgraph-layout-stress-majorization = { path = "../layout/stress-majorization" }
serde = "1.0"
serde_derive = "1.0"

[dependencies.wasm-bindgen]
version = "0.2.78"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"