[package]
name = "egraph-wasm"
version = "5.0.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"
description = "WebAssembly binding of egraph."
repository = "https://github.com/likr/egraph-rs/tree/master/crates/wasm"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
ndarray = "0.15"
petgraph = "0.6"
petgraph-algorithm-shortest-path = { path = "../algorithm/shortest-path" }
petgraph-clustering = { path = "../clustering" }
petgraph-drawing = { path = "../drawing" }
petgraph-edge-bundling-fdeb = { path = "../edge-bundling/fdeb" }
petgraph-layout-kamada-kawai = { path = "../layout/kamada-kawai" }
petgraph-layout-mds = { path = "../layout/mds" }
petgraph-layout-overwrap-removal = { path = "../layout/overwrap-removal" }
petgraph-layout-sgd = { path = "../layout/sgd" }
petgraph-layout-stress-majorization = { path = "../layout/stress-majorization" }
petgraph-quality-metrics = { path = "../quality-metrics" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
serde_json = "1.0"
