[package]
name = "petgraph-algorithm-shortest-path"
version = "0.1.0"
edition = "2018"

[dependencies]
ndarray = "0.15"
ordered-float = "3.0"
petgraph = "0.6"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
egraph-dataset = { path = "../../dataset", features = ["1138_bus"] }

[[bench]]
name = "apsp"
harness = false
