[package]
name = "petgraph-layout-fm3"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[dependencies]
petgraph = "0.6"
petgraph-algorithm-connected-components = { path = "../../algorithm/connected-components" }
petgraph-layout-force= { path = "../force" }
petgraph-layout-force-simulation = { path = "../force-simulation" }
rand = "0.7"
