[package]
name = "petgraph-layout-force-simulation"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[dependencies]
petgraph = "0.5"
quadtree = { path = "../../quadtree" }

[dev-dependencies]
getopts = "0.2"
petgraph-edge-bundling-fdeb = { path = "../../edge-bundling/fdeb" }
petgraph-layout-grouped-force = { path = "../grouped-force" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
