[package]
name = "petgraph-layout-force"
version = "0.1.0"
edition = "2018"

[dependencies]
force_derive = { path = "../../util/force_derive" }
petgraph = "0.5"
petgraph-layout-force-simulation = { path = "../force-simulation" }
quadtree = { path = "../../quadtree" }

[dev-dependencies]
getopts = "0.2"
petgraph-edge-bundling-fdeb = { path = "../../edge-bundling/fdeb" }
petgraph-layout-grouped-force = { path = "../grouped-force" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"