[package]
name = "petgraph-layout-grouped-force"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[dependencies]
ordered-float = "0.5"
petgraph = "0.6"
petgraph-layout-force= { path = "../force" }
petgraph-layout-force-simulation = { path = "../force-simulation" }
treemap = { path = "../../treemap" }
