[package]
name = "petgraph-layout-kamada-kawai"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[dependencies]
petgraph = "0.5"
petgraph-algorithm-shortest-path = { path = "../../algorithm/shortest-path" }
petgraph-layout-force-simulation = { path = "../force-simulation" }