[package]
name = "petgraph-layout-kamada-kawai"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[dependencies]
ndarray = "0.16"
petgraph = "0.6"
petgraph-algorithm-shortest-path = { path = "../../algorithm/shortest-path" }
petgraph-drawing = { path = "../../drawing" }