[package]
name = "petgraph-layout-mds"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16"
petgraph = "0.6"
petgraph-algorithm-shortest-path = { path = "../../algorithm/shortest-path" }
petgraph-drawing = { path = "../../drawing" }

[dev-dependencies]
egraph-dataset = { path = "../../dataset", features = ["1138_bus"] }
