[package]
name = "petgraph-layout-separation-constraints"
version = "0.1.0"
edition = "2021"

[dependencies]
fixedbitset = "0.4"
ordered-float = "3.0"
petgraph = "0.6"
petgraph-drawing = { path = "../../drawing" }
petgraph-algorithm-triangulation = { path = "../../algorithm/triangulation" }

[dev-dependencies]
egraph-dataset = { path = "../../dataset", features=["qh882"] }
petgraph-layout-stress-majorization = { path = "../stress-majorization" }
plotters = "0.3"

[[example]]
name = "qh882_separation_constraints"
path = "examples/qh882_separation_constraints.rs"
