[package]
name = "petgraph-layout-separation-constraints"
version = "0.1.0"
edition = "2021"

[dependencies]
fixedbitset = "0.4"
ordered-float = "3.0"
petgraph = "0.6"
petgraph-clustering = { path = "../../clustering" }
petgraph-drawing = { path = "../../drawing" }
petgraph-algorithm-layering = { path = "../../algorithm/layering" }
petgraph-algorithm-triangulation = { path = "../../algorithm/triangulation" }

[dev-dependencies]
egraph-dataset = { path = "../../dataset", features=["qh882"] }
petgraph-layout-mds = { path = "../mds" }
petgraph-layout-stress-majorization = { path = "../stress-majorization" }
petgraph-layout-sgd = { path = "../sgd" }
plotters = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[[example]]
name = "qh882_separation_constraints"
path = "examples/qh882_separation_constraints.rs"

[[example]]
name = "dependency_graph_layered"
path = "examples/dependency_graph_layered.rs"
