[package]
name = "petgraph-layout-sgd"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
ordered-float = "3.0"
petgraph = "0.6"
petgraph-algorithm-shortest-path = { path = "../../algorithm/shortest-path" }
petgraph-layout-force-simulation = { path = "../../layout/force-simulation" }
rand = "0.8"
