[package]
name = "petgraph-layout-stress-majorization"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
petgraph = "0.6"
petgraph-algorithm-shortest-path = { path = "../../algorithm/shortest-path" }
petgraph-layout-force-simulation =  { path = "../../layout/force-simulation" }