[package]
name = "layout-force-directed"
version = "0.2.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
egraph = { path = "../../egraph" }
egraph-wasm-adapter = { path = "../../adapter/wasm" }
js-sys = "0.3.5"
serde = "1.0.91"
serde_derive = "1.0.91"

[dependencies.wasm-bindgen]
version = "0.2.45"
features = [
  'serde-serialize',
]

