[package]
name = "egraph-wasm-layout-force-directed"
version = "0.2.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egraph-wasm-adapter = { path = "../../adapter" }
egraph-layout-force-directed = { path = "../../../layout/force-directed" }
egraph-interface = { path = "../../../interface" }
js-sys = "0.3.20"
wasm-bindgen = "0.2.43"
